--------------------
Bazaar Release Notes
--------------------

.. contents::

IN DEVELOPMENT
--------------

  IMPROVEMENTS:

    * Progress bars now show the rate of activity for some sftp 
      operations, and they are drawn different.  (Martin Pool, #172741)

NOT RELEASED YET
----------------

  COMPATIBILITY BREAKS:

    * By default, ``bzr status`` after a merge now shows just the pending
      merge tip revisions. This improves the signal-to-noise ratio after
      merging from trunk and completes much faster. To see all merged
      revisions, use the new ``-v`` flag.  (Ian Clatworthy)

  NEW FEATURES:

  IMPROVEMENTS:

    * ``bzr init`` will now print a little less verbose output.
      (Marius Kruger)

    * Rule-based preferences can now accept multiple patterns for a set of
      rules.  (Marius Kruger)

  BUG FIXES:

    * ``bzr log FILE`` now correctly shows mainline revisions merging
      a change to FILE when the ``--short`` and ``--line`` log formats
      are used. (Ian Clatworthy, #317417)

    * Fix a problem with CIFS client/server lag on Windows colliding with
      an invariant-per-process algorithm for generating AtomicFile names
      (Adrian Wilkins, #304023)

    * Many socket operations now handle EINTR by retrying the operation.
      Previously EINTR was treated as an unrecoverable failure.  There is
      a new ``until_no_eintr`` helper function in ``bzrlib.osutils``.
      (Andrew Bennetts)

  DOCUMENTATION:

  API CHANGES:

  TESTING:

  INTERNALS:

    * ``TreeDelta.show()`` now accepts a ``filter`` parameter allowing log
      formatters to retrict the output.
      (Vincent Ladeuil)

bzr 1.11rc1 "Eyes up!" 2009-01-09
---------------------------------

This first monthly release of Bazaar for 2009 improves Bazaar's operation
in Windows, Mac OS X, and other situations where file names are matched
without regard to capitalization: Bazaar tries to match the case of an