@@ -794,16 +794,12 @@ class Merge3Merger(object):
             content_changed = True
             if kind_winner == 'this':
                 # No kind change in OTHER, see if there are *any* changes
-                if other_ie.kind == None:
-                    # No content and 'this' wins the kind, so skip this?
-                    # continue
-                    pass
-                elif other_ie.kind == 'directory':
+                if other_ie.kind == 'directory':
                     if parent_id_winner == 'this' and name_winner == 'this':
                         # No change for this directory in OTHER, skip
                         continue
                     content_changed = False
-                elif other_ie.kind == 'file':
+                elif other_ie.kind is None or other_ie.kind == 'file':
                     def get_sha1(ie, tree):
                         if ie.kind != 'file':
                             return None
