@@ -1410,12 +1410,48 @@ class TestMergerEntriesLCA(TestMergerBase):
         #       B C  B nothing, C deletes foo
         #       |X|
         #       D E  D restores foo (same as B), E leaves it deleted
-        # We should emit an entry for this
+        # Analysis:
+        #   A => B, no changes
+        #   A => C, delete foo (C should supersede B)
+        #   C => D, restore foo
+        #   C => E, no changes
+        # D would then win 'cleanly' and no record would be given
         builder = self.get_builder()
         builder.build_snapshot('A-id', None,
             [('add', (u'', 'a-root-id', 'directory', None)),
              ('add', (u'foo', 'foo-id', 'file', 'content\n'))])
         builder.build_snapshot('B-id', ['A-id'], [])
+        builder.build_snapshot('C-id', ['A-id'],
+            [('unversion', 'foo-id')])
+        builder.build_snapshot('E-id', ['C-id', 'B-id'], [])
+        builder.build_snapshot('D-id', ['B-id', 'C-id'], [])
+        merge_obj = self.make_merge_obj(builder, 'E-id')
+
+        entries = list(merge_obj._entries_lca())
+        root_id = 'a-root-id'
+        self.assertEqual([], entries)
+
+    def test_not_in_other_mod_in_lca1_not_in_lca2(self):
+        #       A    base, introduces 'foo'
+        #       |\
+        #       B C  B changes 'foo', C deletes foo
+        #       |X|
+        #       D E  D restores foo (same as B), E leaves it deleted (as C)
+        # Analysis:
+        #   A => B, modified foo
+        #   A => C, delete foo, C does not supersede B
+        #   B => D, no changes
+        #   C => D, resolve in favor of B
+        #   B => E, resolve in favor of E
+        #   C => E, no changes
+        # In this case, we have a conflict of how the changes were resolved. E
+        # picked C and D picked B, so we should issue a conflict
+        builder = self.get_builder()
+        builder.build_snapshot('A-id', None,
+            [('add', (u'', 'a-root-id', 'directory', None)),
+             ('add', (u'foo', 'foo-id', 'file', 'content\n'))])
+        builder.build_snapshot('B-id', ['A-id'], [
+            ('modify', ('foo-id', 'new-content\n'))])
         builder.build_snapshot('C-id', ['A-id'],
             [('unversion', 'foo-id')])
         builder.build_snapshot('E-id', ['C-id', 'B-id'], [])
@@ -1431,6 +1467,21 @@ class TestMergerEntriesLCA(TestMergerBase):
                          ], entries)
 
     def test_only_in_one_lca(self):
+        #   A   add only root
+        #   |\
+        #   B C B nothing, C add file
+        #   |X|
+        #   D E D still has nothing, E removes file
+        # Analysis:
+        #   B => D, no change
+        #   C => D, removed the file
+        #   B => E, no change
+        #   C => E, removed the file
+        # Thus D & E have identical changes, and this is a no-op
+        # Alternatively:
+        #   A => B, no change
+        #   A => C, add file, thus C supersedes B
+        #   w/ C=BASE, D=THIS, E=OTHER we have 'happy convergence'
         builder = self.get_builder()
         builder.build_snapshot('A-id', None,
             [('add', (u'', 'a-root-id', 'directory', None))])
@@ -1444,11 +1495,7 @@ class TestMergerEntriesLCA(TestMergerBase):
 
         entries = list(merge_obj._entries_lca())
         root_id = 'a-root-id'
-        self.assertEqual([('a-id', True,
-                           ((None, [None, root_id]), None, None),
-                           ((None, [None, u'a']), None, None),
-                           ((None, [None, False]), None, None)),
-                         ], entries)
+        self.assertEqual([], entries)
 
     def test_only_in_other(self):
         builder = self.get_builder()
